# crypto-streaming-dashboard

./: .gitignore  Makefile  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/rates/: router.py
backend/app/api/v1/ws/: router.py
backend/app/core/: container.py  database.py
backend/app/models/: hourly_average.py
backend/app/realtime/: connection_manager.py  finnhub_client.py  manual_finnhub_runner.py
backend/app/repositories/: hourly_average_repo.py  protocol.py
backend/app/schemas/: rates.py
backend/app/services/: rates_manager_service.py
backend/tests/: conftest.py  test_api_rates.py  test_rates_service.py
frontend/: Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.tsx  main.tsx
frontend/src/api/: client.ts  rates.ts
frontend/src/components/MiniChart/: MiniChart.scss  MiniChart.tsx
frontend/src/hooks/: useRatesStream.ts
frontend/src/pages/Dashboard/: Dashboard.scss  Dashboard.tsx
frontend/src/styles/: global.scss  variables.scss
frontend/src/types/: rates.ts
